# delta

./: Cargo.toml  Makefile  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: rust.yml
athena/: Cargo.toml
athena/examples/: linear.rs  mlp.rs  mlp2.rs  tensor.rs
athena/src/: ivalue.rs  lib.rs  nn.rs  operations.rs  optim.rs  tensor.rs
athena/src/linalg/: product.rs
athena/src/nn/: linear.rs  module.rs
athena/src/optim/: sgd.rs
athena/tests/: activations_test.rs  data_test.rs  linalg_test.rs  optim_test.rs  tensor_test.rs
athena_py/: Cargo.toml  main.ipynb  pyproject.toml
athena_py/src/: lib.rs  linalg.rs  nn.rs  operations.rs  tensor.rs
delta/: Cargo.toml  README.md
delta-macros/: Cargo.toml  README.md
delta-macros/src/: lib.rs
delta-py/: Cargo.toml  README.md  pyproject.toml
delta-py/python/delta/: __init__.pyi  tensor_init.pyi
delta-py/python/delta/nn/: __init__.py  __init__.pyi  linear.py  module.py
delta-py/python/delta/optim/: __init__.py  __init__.pyi
delta-py/src/: lib.rs  linalg.rs  nn.rs  operations.rs  optim.rs  tensor.rs  tensor_init.rs
delta-py/src/nn/: criterions.rs  functional.rs  parameter.rs
delta-py/src/optim/: sgd.rs
delta/examples/: linear.rs  matmul.rs  mlp.rs  mlp2.rs  softmax.rs  tensor.rs
delta/src/: backward.rs  ivalue.rs  lib.rs  nn.rs  op.rs  operations.rs  tensor.rs  tensor_init.rs
delta/src/nn/: criterions.rs  functional.rs  linear.rs  module.rs  parameter.rs
delta/src/optim/: sgd.rs
delta/src/optim/lr_scheduler/: multistep_lr.rs
delta/tests/: activations_test.rs  data_test.rs  linalg_test.rs  optim_test.rs  tensor_test.rs
examples/: linear.rs  matmul.rs  mlp.rs  mlp2.rs  softmax.rs
src/: backward.rs  op.rs  tensor.rs
src/data/: dataloader.rs
src/nn/: criterions.rs  functional.rs  linear.rs
src/optim/: lr_scheduler.rs  sgd.rs
tests/: data_test.rs  linalg_test.rs  optim_test.rs
(+9 files in other folders)
